# cryo_reweighting

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: one_d_example.ipynb  one_d_example_expectation_maximization.ipynb  reg_tuning.ipynb  square_example.ipynb
experiments/: cryoem_example.ipynb  one_d_example.ipynb  one_d_example_private copy.ipynb
src/cre_reg/: negative_log_likelihood.py  optimization.py  utils.py
src/cre_reg/jax/: utils.py
src/cre_reg/torch/: negative_log_likelihood.py
src/cryo_reweighting/: optimization.py  utils.py
src/cryo_reweighting/examples/: gaussian_mixture.py
src/cryo_reweighting/jax/: optimization.py  utils.py
src/cryo_reweighting/torch/: negative_log_likelihood.py  optimization.py
tests/: test_gaussian.py  test_gmm.py  test_optimization.py  test_rectangle.py
